--- a/notebooks/07b-file-handling-part-II.ipynb
+++ b/notebooks/07b-file-handling-part-II.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "res/datafile.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory = \"res\" \n",
     "import os \n",
@@ -33,24 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4']\n",
-      "['p101111', 'Ali Khayam', ' 64', ' 78.5', ' 89', ' 25']\n",
-      "['p101112', 'Mudasser Farooq', ' 14', ' 28.5', ' 83', ' 76']\n",
-      "['p101113', 'Tamleek Ali', ' 87', ' 12', ' 1.6', ' 22']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(csv_filename, 'r') as f: \n",
     "    for line in f: \n",
@@ -59,27 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4'],\n",
-       " ['p101111', 'Ali Khayam', ' 64', ' 78.5', ' 89', ' 25'],\n",
-       " ['p101112', 'Mudasser Farooq', ' 14', ' 28.5', ' 83', ' 76'],\n",
-       " ['p101113', 'Tamleek Ali', ' 87', ' 12', ' 1.6', ' 22']]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rows = [] \n",
     "\n",
@@ -92,27 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4'],\n",
-       " ['p101111', 'Ali Khayam', 64.0, 78.5, 89.0, 25.0],\n",
-       " ['p101112', 'Mudasser Farooq', 14.0, 28.5, 83.0, 76.0],\n",
-       " ['p101113', 'Tamleek Ali', 87.0, 12.0, 1.6, 22.0]]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in rows[1:]:       # skip the header \n",
     "    for c in range(2, 6): \n",
@@ -133,75 +86,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a,b,c'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "','.join( ['a', 'b', 'c'] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4'],\n",
-       " ['p101111', 'Ali Khayam', 64.0, 78.5, 89.0, 25.0],\n",
-       " ['p101112', 'Mudasser Farooq', 14.0, 28.5, 83.0, 76.0],\n",
-       " ['p101113', 'Tamleek Ali', 87.0, 12.0, 1.6, 22.0]]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rows "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4']\n",
-      "['p101111', 'Ali Khayam', '64.0', '78.5', '89.0', '25.0']\n",
-      "['p101112', 'Mudasser Farooq', '14.0', '28.5', '83.0', '76.0']\n",
-      "['p101113', 'Tamleek Ali', '87.0', '12.0', '1.6', '22.0']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in rows: \n",
     "    print([str(c) for c in r])   # save this in a list         "
@@ -209,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -227,51 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Roll no', 'Full Name', ' A1', ' A2', ' A3', ' A4'],\n",
-       " ['p101111', 'Ali Khayam', '64.0', '78.5', '89.0', '25.0'],\n",
-       " ['p101112', 'Mudasser Farooq', '14.0', '28.5', '83.0', '76.0'],\n",
-       " ['p101113', 'Tamleek Ali', '87.0', '12.0', '1.6', '22.0']]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Roll no,Full Name, A1, A2, A3, A4\n",
-      "p101111,Ali Khayam,64.0,78.5,89.0,25.0\n",
-      "p101112,Mudasser Farooq,14.0,28.5,83.0,76.0\n",
-      "p101113,Tamleek Ali,87.0,12.0,1.6,22.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in out_rows: \n",
     "    out_line = ','.join(r)  # and then save this to a file \n",
@@ -306,21 +198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "res/datafile-out.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_filename_out = os.path.join(directory, 'datafile-out.csv')\n",
     "print(csv_filename_out)\n",
@@ -352,6 +236,7 @@
    "version": "3.6.3"
   },
   "livereveal": {
+   "scroll": true,
    "transition": "fade"
   }
  },
